force-app/main/default/objects/JwtUserRoleRule__mdt/JwtUserRoleRule__mdt.object-meta.xml
<CustomObject>
    <description
  >Maps permission-set assignments to application roles for JWT claims.</description>
    <label>JWT User Role Rule</label>
    <pluralLabel>JWT User Role Rules</pluralLabel>
</CustomObject>