force-app/main/default/objects/JwtUserRoleRule__mdt/fields/AppKey__c.field-meta.xml
<CustomField>
    <fullName>AppKey__c</fullName>
    <label>App Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>