force-app/main/default/objects/JwtUserRoleRule__mdt/fields/MatchType__c.field-meta.xml
<CustomField>
    <fullName>MatchType__c</fullName>
    <label>Match Type</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>