force-app/main/default/objects/JwtUserRoleRule__mdt/fields/ResolvedRole__c.field-meta.xml
<CustomField>
    <fullName>ResolvedRole__c</fullName>
    <label>Resolved Role</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>