force-app/main/default/objects/JwtUserRoleRule__mdt/fields/TargetApiName__c.field-meta.xml
<CustomField>
    <fullName>TargetApiName__c</fullName>
    <label>Target API Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>